# dishka-airflow

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  justfile  mypy.ini  noxfile.py  pyproject.toml  ruff.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  pr_codeql.yaml.yml  pr_dependency_review.yml  release_pypi.yaml
examples/: Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  ruff.toml
examples/dags/: dishka_airflow_provider_dag.py  dishka_context_manager_dag.py  dishka_simple_dag.py  dishka_with_params_dag.py
examples/plugins/: dishka_plugin.py
examples/src/myapp/application/: interfaces.py  services.py
examples/src/myapp/domain/: entities.py
examples/src/myapp/infrastructure/: persistence.py  providers.py
src/dishka_airflow/: __init__.py  _context.py  _injectors.py  _listener.py  _plugin.py  _provider.py  _types.py
tests/: common.py  conftest.py  factories.py
tests/integration/: conftest.py
tests/integration/asset/: __init__.py  conftest.py  test_async.py  test_decorator_async.py  test_decorator_sync.py  test_multi_decorator_async.py  test_multi_decorator_sync.py  test_sync.py
tests/integration/setup_teardown/: __init__.py  test_async.py  test_sync.py
tests/integration/task/: __init__.py  test_async.py  test_branch_async.py  test_branch_sync.py  test_decorator_async.py  test_decorator_sync.py  test_outlets_async.py  test_outlets_sync.py  test_sensor_async.py  test_sensor_sync.py  test_short_circuit_async.py  test_short_circuit_sync.py  test_sync.py
tests/unit/: conftest.py  test_errors.py
tests/unit/inject/: __init__.py  test_async.py  test_sync.py
tests/unit/listener/: __init__.py
tests/unit/listener/app/: __init__.py  test_async.py  test_sync.py
tests/unit/listener/request/: __init__.py  test_async.py  test_sync.py
tests/unit/plugin/: __init__.py  test_plugin.py
